# py-sphviewer

./: meson.build  pyproject.toml  setup.py
examples/: example.py
sphviewer/: Particles.py  meson.build
sphviewer/extensions/: meson.build  rendermodule.c  scenemodule.c
sphviewer/tools/: makehsvmodule.c  meson.build
wiki/: tutorial_sphviewer.ipynb
